--- a/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
+            <vc:restaurant-count></vc:restaurant-count>
             @RenderSection("footer", required: false)
             &copy; 2021 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
@@ -53,3 +54,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+ 
